@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.881 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.882 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -144,3 +144,6 @@ Changes from NetBSD 4.0 to NetBSD 5.0:
 	tcpdrop(8): Ported by anon ymous (from FreeBSD/OpenBSD)
 		[christos 20070625]
 	fast_ipsec(4): Add support for IPsec NAT-T [degroote 20070627]
+	i386: Imported gcscide(4), a driver for the AMD CS5535 Companion
+		IDE Controller for systems with an AMD Geode GX2 CPU
+		(for example the decTOP). [xtraeme 20070627]
